feat: add new page

--- a/src/main/resources/templates/author/author-result.html
+++ b/src/main/resources/templates/author/author-result.html
@@ -6,6 +6,14 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>HELLO [[${name}]]</h1>
+    <h1>Author Result</h1>
+    <div>
+      <h4>Author Name</h4>
+      <p>[[${authorDto.name}]]</p>
+    </div>
+    <div>
+      <h4>Description</h4>
+      <p>[[${authorDto.description}]]</p>
+    </div>
   </body>
 </html>
