--- a/src/main/resources/templates/author/author-result.html
+++ b/src/main/resources/templates/author/author-result.html
@@ -4,16 +4,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" th:href="@{/styles.css}" />
   </head>
   <body>
-    <h1>Author Result</h1>
-    <div>
-      <h4>Author Name</h4>
-      <p>[[${authorDto.name}]]</p>
-    </div>
-    <div>
-      <h4>Description</h4>
-      <p>[[${authorDto.description}]]</p>
-    </div>
+    <main class="container page page--center">
+      <div class="card flex-fill" style="max-width: 500px">
+        <div class="card-body">
+          <h4 class="card-title">Author Result</h4>
+          <div class="row">
+            <div class="col">
+              <h6>Author Name</h6>
+              <p class="card-text">[[${authorDto.name}]]</p>
+            </div>
+            <div class="col">
+              <h6>Description</h6>
+              <p class="card-text">[[${authorDto.description}]]</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
