--- a/src/main/resources/templates/author/create-author.html
+++ b/src/main/resources/templates/author/create-author.html
@@ -4,18 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" th:href="@{/styles.css}" />
   </head>
   <body>
-    <form th:action="@{/author/new}" th:object="${authorDto}" method="post">
-      <div>
-        <label for="name">Name</label>
-        <input type="text" name="name" th:field="*{name}" />
-      </div>
-      <div>
-        <label for="description">Description</label>
-        <input type="text" name="description" th:field="*{description}" />
-      </div>
-      <button type="submit">Submit</button>
-    </form>
+    <div class="container page page--center">
+      <form
+        th:action="@{/author/new}"
+        th:object="${authorDto}"
+        method="post"
+        class="form__container card"
+      >
+        <div class="card-body">
+          <fieldset>
+            <legend>Author Information</legend>
+            <div class="mb-3">
+              <label for="name" class="form-label">Author Name</label>
+              <input
+                id="name"
+                type="text"
+                name="name"
+                class="form-control"
+                th:field="*{name}"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="description" class="form-label"
+                >Author Description</label
+              >
+              <input
+                id="description"
+                type="text"
+                name="description"
+                class="form-control"
+                th:field="*{description}"
+              />
+            </div>
+          </fieldset>
+          <button type="submit" class="btn btn-primary">Create Author</button>
+        </div>
+      </form>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
